avro_derive/tests/ui/avro_rs_373_flatten.stderr
error: `#[avro(flatten)]` requires `#[serde(flatten)]`, it's also deprecated. Please use only `#[serde(flatten)]`
  --> tests/ui/avro_rs_373_flatten.rs:22:5
   |
22 |     #[avro(flatten)]
   |     ^
